# QmlReversi

./: CMakeLists.txt  CanvasTrigger.h  GameModel.cpp  GameModel.h  QmlOthello.cpp  config.h.in  main.qml
